pkgcore-checks Release Notes
============================

See ChangeLog for full commit logs; this is summarized and major changes.


* fix exception in pkg directory checks for when files directory
  doesn't exist.

* cleanup of deprecated api usage.


pkgcore-checks 0.4.14: April 24th, 2011

* Updated compatibility w/ recent snakeoil/pkgcore changes.

* deprecated eclasses list was updated.

* LICENSE checks for virtual/* are now suppressed.


pkgcore-checks 0.4.13: January 8th, 2010

* fix to use dep scanning in visibility where it was missing use deps that
  can never be satisfied for a specific profile due to use masking/forcing.

* more visibility optimizations; Grand total in combination w/ optimziations
  leveled in snakeoil/pkgcore since pkgcore-checks 0.4.12 released, 58%
  faster now.

* ignore unstated 'prefix' flag in conditionals- much like bootstrap, its'
  the latest unstated.

* added a null reporter for performance testing.


pkgcore-checks 0.4.12: December 27th, 2009

* corner case import error in metadata_xml scan for py3k is now fixed; if
  you saw urllib.urlopen complaints, this is fixed.

* >snakeoil-0.3.4 is now required for sdist generation.

* visibility scans now use 22% less memory (around 130MB on python2.6 x86_64)
  and is about 3% faster.


pkgcore-checks 0.4.11: December 20th, 2009

* minor speedup in visibility scans- about 3% faster now.

* fix a traceback in deprecated from when portage writes the ebuild cache out
  w/out any _eclasses_ entry.

* fix a rare traceback in visibility scans where a virtual metapkg has zero
  matches.


pkgcore-checks 0.4.10: December 14th, 2009

* fix a bug where use deps on metapkgs was invalidly being flagged.


pkgcore-checks 0.4.9: November 26th, 2009

* fix a bug in test running- bzr_verinfo isn't generated for pkgcore-checks
  in sdist (no need), yet build_py was trying to regenerate it.  Basically
  broke installation on machines that lacked bzr.


pkgcore-checks 0.4.8: November 26th, 2009
